# duplicate-image-detection

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: cache.py  config.py  database.py  duplicate_detection.py  exceptions.py  main.py  middleware.py  models.py  repositories.py  routes.py  schemas.py  services.py  storage.py  ui_routes.py  utils.py
app/computer_vision/: __init__.py  base.py  constants.py  embedding.py  factory.py  labels.py  local.py  relevance.py  runtime_env.py  yolo.py
app/templates/: home.html
docker/: entrypoint.sh  prefetch_cv_models.py
tests/: conftest.py  test_computer_vision.py  test_cv_factory.py  test_cv_runtime_env.py  test_duplicate_detection.py  test_ip_middleware.py  test_relevance.py  test_submit_flow.py
tests/integration/: conftest.py  test_middleware.py  test_reports_api.py  test_ui.py
