[project]
name = "did-backend-api"
version = "0.1.0"
description = "FastAPI backend for environmental concern reporting with duplicate detection"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "boto3>=1.34.0",
  "geoalchemy2>=0.15.0",
  "pgvector>=0.3.0",
  "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "ruff>=0.6.0", "pre-commit>=4.0.0"]
cv-embedding = ["open-clip-torch>=2.24.0", "torch>=2.2.0"]
cv-yolo = ["ultralytics>=8.3.0", "open-clip-torch>=2.24.0", "torch>=2.2.0"]
cv = ["open-clip-torch>=2.24.0", "ultralytics>=8.3.0", "torch>=2.2.0"]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "docker*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
  "integration: tests requiring Postgres (skip when database is unavailable)",
]
